Have the B2B API return (halfway) sensible responses
